# industrial_devices

./: CMakeLists.txt  LICENSE  README.md
devices/: CMakeLists.txt
devices/conveyor_belt/: CMakeLists.txt
devices/conveyor_belt/src/: run.cpp
devices/rotating_turntable/: CMakeLists.txt
devices/rotating_turntable/src/: run.cpp
devices/test_device/: CMakeLists.txt
devices/test_device/src/: run.cpp
libs/: CMakeLists.txt
libs/avahi_client/: CMakeLists.txt
libs/avahi_client/include/avahi_client/: avahi_client.hpp
libs/avahi_client/src/: avahi_client.cpp
libs/mdns_dnssd_test/: CMakeLists.txt
libs/mdns_dnssd_test/src/: run.cpp
libs/property_server/: CMakeLists.txt
libs/property_server/include/property_server/: device.hpp  property.hpp  server.hpp
libs/property_server/src/: device.cpp  property.cpp  server.cpp
